--- a/public/styles/site/_index.scss
+++ b/public/styles/site/_index.scss
@@ -421,15 +421,16 @@ body {
         
         .container {
             grid-template-columns: 1fr;
-            grid-template-rows: 1fr 1fr 1fr 1fr;    
+            grid-template-rows: 1fr 1fr 1fr 1fr;
                               
             .tile-container{
+			  transform: scale(1.05);
 
                 .overflow-hidden {
                     width: 100%;
                     height: 100%;
-                    border-bottom: solid 1.5px white;
-                    border-top: solid 1.5px white;
+                    border-bottom: solid 5px white;
+                    border-top: solid 5px white;
 
                     @for $i from 1 through 4 {
                         .tile-#{$i}{
@@ -443,7 +444,6 @@ body {
                 .tile-box{
                     width: 60%;
                     height: 40%;
-                    border: solid 0.5px $altBlue;
 
                     object {
                         height: 35%;
